<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devicebook.devicebook.activities.CustomerEntryActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/borderdrawable"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        android:textAlignment="center"

        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonalSub" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/borderdrawable"
        android:hint="@string/lname"
        android:inputType="textPersonName"

        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/borderdrawable"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textEmailSubject"

        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/address1"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/borderdrawable"
        android:hint="@string/address1"
        android:inputType="textEmailSubject|textPersonName"

        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/borderdrawable"
        android:hint="@string/Countryname"
        android:inputType="textPersonName"

        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address1" />

    <Button
        android:id="@+id/pnuContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="438dp"
        android:background="@drawable/buttonshape2"
        android:onClick="padbuttonpressed"
        android:text="@string/pnuContinue"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/PersonalSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="14dp"
        android:text="@string/Personalsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
